# resource-procurement-agent

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  server.py
datasets/: data.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
src/: state.py
src/nodes/: analyzer.py  extractor.py  formatter.py
