[project]
name = "resource-procuremnt-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.2.0",
    "langsmith>=0.8.5",
    "uvicorn>=0.47.0",
]
